新完成了几道很重要的题